deploy/envs/lockal-minikube/k8s/django-clearsessions-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app: django-app
    component: maintenance
spec:
  containers:
  - name: django-clearsessions
    image: my-django-app:latest
    imagePullPolicy: IfNotPresent
    command: ["python", "manage.py", "clearsessions"]
  restartPolicy: Never
