deploy/envs/lockal-minikube/k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
      app.kubernetes.io/instance: django-production
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
        app.kubernetes.io/instance: django-production
    spec:
      containers:
      - name: django-app
        image: my-django-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
