deploy/envs/lockal-minikube/k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-production
  ports:
  - name: http
    port: 80
    targetPort: 8000
