deploy/envs/lockal-minikube/k8s/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Это "имя" будет адресом для Django
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432 # Внешний порт сервиса
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
