deploy/envs/lockal-minikube/k8s/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burger-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: star-burger.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service 
            port:
              number: 80
